Kevin's solution: His initial section spacing is incorrect (mine is correct). Adding a very useful utility class of ".xl-space" !!!!

--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ h3,
   color: var(--clr-neutral-900);
 }
 dt {
-  /*font-size: var(--fs-400);*/
   font-weight: var(--fw-300);
   color: var(--clr-neutral-400);
 }
@@ -152,8 +151,7 @@ dd {
   ////////////// */
 
 section {
-  /*padding: 2.5rem 0;*/
-  padding: 2.5rem;
+  padding: 2.5rem 0;
 }
 
 @media (min-width: 40rem) {
@@ -181,9 +179,10 @@ section {
   ); /* Kevin's solution. Better to it to em rather than rem, so it can be related to the current font size */
 }
 
-header {
-  margin-bottom: 5rem;
+.xl-space {
+  margin-top: 3rem;
 }
+
 /* ///////////////
   Individual sections
   ////////////// */
